--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
  name: git-gateway
- branch: main # Branch to update (optional; defaults to master)
+ branch: spoilers # Branch to update (optional; defaults to master)
 
   
 media_folder: static/img
