--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,4 +29,5 @@ collections:
       preview: false
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Description', name: 'description', widget: 'text' }
       - { label: 'Image', name: 'image', widget: 'image', media_library: config: multiple: true}
