--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,4 +30,4 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Description', name: 'description', widget: 'text' }
-      - { label: 'Image', name: 'image', widget: 'image', media_library: config: multiple: true}
+      - { label: 'Image', name: 'image', widget: 'image',  multiple: true}
