--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
+    "@nuxt/content": "^1.15.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vuetify": "^2.5.5"
