--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
   # Recipes
   - name: "recipes"
-    label: "Rrecipes"
+    label: "Recipes"
     folder: "content/recipes"
     format: "frontmatter"
     create: true
@@ -49,9 +49,9 @@ collections:
                 widget: "select"
                 options:
                   - { label: "1/8 Cup", value: "1/8" }
-                  - { label: "1/4 Cup" }
-                  - { label: "1/2 Cup" }
-                  - { label: "1 Cup" }
+                  - { label: "1/4 Cup", value: "1/4" }
+                  - { label: "1/2 Cup", value: 1/2 }
+                  - { label: "1 Cup", value: "1" }
       - label: "Steps"
         name: "steps"
         widget: "list"
