--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -65,28 +65,30 @@ collections:
         date_format: DD/MM/YYYY
   # Text stuff
   - name: "code-notes"
+    label: "Code Notes"
     folder: "content/code"
     format: "frontmatter"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
       preview: true
-    widget: "list"
     fields:
-      - name: "title"
-        label: "Title"
-        widget: "string"
-      - name: "date"
-        label: "Date Published"
-        widget: "datetime"
-      - name: "markdown-edit"
-        label: "Markdown Editor"
-        widget: "markdown"
-        sanitize_preview: "true"
-      - name: "text-editor"
-        label: "Text Editor"
-        widget: "text"
-      - name: "code-editor"
-        label: "Code Editor"
-        widget: "code"
-        default_language: "javascript"
+      - name: "editor"
+        widget: "list"
+        fields:
+          - name: "title"
+            label: "Title"
+            widget: "string"
+          - name: "date"
+            label: "Date Published"
+            widget: "datetime"
+          - name: "markdown-edit"
+            label: "Markdown Editor"
+            widget: "markdown"
+          - name: "text-editor"
+            label: "Text Editor"
+            widget: "text"
+          - name: "code-editor"
+            label: "Code Editor"
+            widget: "code"
+            default_language: "javascript"
