made moveable fields

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -73,22 +73,26 @@ collections:
     editor:
       preview: true
     fields:
-      - name: "editor"
+      - name: "container"
         widget: "list"
         fields:
           - name: "title"
             label: "Title"
             widget: "string"
+      - name: "container"
+        widget: "list"
+        fields:
           - name: "date"
             label: "Date Published"
             widget: "datetime"
-          - name: "markdown-edit"
-            label: "Markdown Editor"
-            widget: "markdown"
-          - name: "text-editor"
-            label: "Text Editor"
-            widget: "text"
-          - name: "code-editor"
-            label: "Code Editor"
-            widget: "code"
-            default_language: "javascript"
+      - name: "markdown-edit"
+        label: "Markdown Editor"
+        widget: "markdown"
+        sanitize_preview: "true"
+      - name: "text-editor"
+        label: "Text Editor"
+        widget: "text"
+      - name: "code-editor"
+        label: "Code Editor"
+        widget: "code"
+        default_language: "javascript"
