--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -79,7 +79,7 @@ collections:
           - name: "title"
             label: "Title"
             widget: "string"
-      - name: "container"
+      - name: "container-1"
         widget: "list"
         fields:
           - name: "date"
